--- a/index.html
+++ b/index.html
@@ -495,7 +495,7 @@
   				<textarea style="margin-left: 250px; background-color: #BFFFFF; border-color: black; border-radius: 100px;"   name="message" rows="2" cols="150" placeholder="           Paste your URL Here" class="form1"></textarea><br><br>
                	<textarea style="margin-left: 250px; background-color: #FEDDFF; border-color: black; border-radius: 15px;"   name="message" rows="20" cols="150" placeholder="           Paste Privacy Statement here" class="form1"></textarea><br><br>
               
-              <input style="background-color: #B9B9B9; font-size:30px; margin-left:710px"    class="submit" type="submit" value="Submit"><br><br><br><br><br>
+              <a href="summary.html">  <input style="background-color: #B9B9B9; font-size:30px; margin-left:710px"    class="submit" type="submit" value="Submit" > </a> <br><br><br><br><br>
             </form> 
 
 		<!--form end-->
