--- a/summary.html
+++ b/summary.html
@@ -211,10 +211,10 @@
 	  		<input type="text" id="fname" name="fname" value="  No" style="margin-left: 150px; background-color: #52BAFF; border-color: black; border-radius: 15px; font-size: 30px;"><br><br><br>
 
 	  	<label for="fname" style="margin-left: 150px; background-color: #BBE1D7; border-color: black; border-radius: 5px; font-size: 30px;">Overall smog score</label><br>
-	  		<input type="text" id="fname" name="fname" value="  No" style="margin-left: 150px; background-color: #52BAFF; border-color: black; border-radius: 15px; font-size: 30px;"><br><br><br>
+	  		<input type="text" id="fname" name="fname" value="  13.52" style="margin-left: 150px; background-color: #52BAFF; border-color: black; border-radius: 15px; font-size: 30px;"><br><br><br>
 
 	  	<label for="fname" style="margin-left: 150px; background-color: #BBE1D7; border-color: black; border-radius: 5px; font-size: 30px;">Overall Read Score</label><br>
-	  		<input type="text" id="fname" name="fname" value="  No" style="margin-left: 150px; background-color: #52BAFF; border-color: black; border-radius: 15px; font-size: 30px;"><br><br><br>
+	  		<input type="text" id="fname" name="fname" value="  18.2" style="margin-left: 150px; background-color: #52BAFF; border-color: black; border-radius: 15px; font-size: 30px;"><br><br><br>
 
 	  		
 		</form> 
