--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 								<span class="icon-bar"></span>
 							</button>
 							<a class="navbar-brand" href="index.html">
-								<img src="sample.png" alt="logo">
+								<img src="assets/images/banner/5.png" alt="logo">
 							</a>
 						</div><!--/.navbar-header -->
 
@@ -624,7 +624,7 @@
 								<div class="hm-foot-title ">
 									<div class="logo">
 										<a href="index.html">
-											<img src="sample.png" alt="logo" />
+											<img src="assets/images/banner/5.png.png" alt="logo" />
 										</a>
 									</div><!-- /.logo-->
 								</div><!--/.hm-foot-title-->
