--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		<link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900" rel="stylesheet">
 		
         <!-- TITLE OF SITE -->
-        <title>Name of site</title>
+        <title>Cyberify</title>
 
         <!-- for title img -->
 		<link rel="shortcut icon" type="image/icon" href="assets/images/logo/favicon.png"/>
@@ -210,7 +210,7 @@
 								<div class="row">
 									<div class="col-sm-12">
 										<div class="single-slide-item-content">
-											<h2>Name of <br> site</h2>
+											<h2>Cyberify <br> </h2>
 											<p>
 												Cyber Attacks 
 											</p>
