--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
 										<div class="single-slide-item-content">
 											<h2>Cyberify <br> </h2>
 											<p>
-												Cyber Attacks 
+												Don't let hacker trick you with privacy policy 
 											</p>
 											<button type="button" class="slide-btn">
 											get started
