--- a/index.html
+++ b/index.html
@@ -234,10 +234,10 @@
 									<div class="col-sm-12">
 										<div class="single-slide-item-content">
 											<h2>
-												Name of  <br> sire
+												Cyberify  <br> 
 											</h2>
 											<p>
-												Cyber Attacks
+												Don't let hacker trick you with privacy policy 
 											</p>
 											<button type="button"  class="slide-btn">
 												get started
