--- a/summary.html
+++ b/summary.html
@@ -164,7 +164,7 @@
 								<span class="icon-bar"></span>
 							</button>
 							<a class="navbar-brand" href="index.html">
-								<img src="sample.png" alt="logo">
+								<img src="assets/images/home/5.png.png" alt="logo">
 							</a>
 						</div><!--/.navbar-header -->
 
