--- a/summary.html
+++ b/summary.html
@@ -205,7 +205,7 @@
 	  		<input type="text" id="fname" name="fname" value="  No" style="margin-left: 150px; background-color: #52BAFF; border-color: black; border-radius: 15px; font-size: 30px;"><br><br><br>
 
 	  	<label for="fname" style="margin-left: 150px; background-color: #BBE1D7; border-color: black; border-radius: 5px; font-size: 30px;">Make changes in your computer?</label><br>
-	  		<input type="text" id="fname" name="fname" value="  Yes" style="margin-left: 150px; background-color: #52BAFF; border-color: black; border-radius: 15px; font-size: 30px;"><br><br><br>
+	  		<input type="text" id="fname" name="fname" value="  No" style="margin-left: 150px; background-color: #52BAFF; border-color: black; border-radius: 15px; font-size: 30px;"><br><br><br>
 
 	  	<label for="fname" style="margin-left: 150px; background-color: #BBE1D7; border-color: black; border-radius: 5px; font-size: 30px;">Sharing personal info to untrusted websites</label><br>
 	  		<input type="text" id="fname" name="fname" value="  No" style="margin-left: 150px; background-color: #52BAFF; border-color: black; border-radius: 15px; font-size: 30px;"><br><br><br>
