--- a/summary.html
+++ b/summary.html
@@ -195,22 +195,22 @@
 		<textarea style="margin-left: 150px; background-color: #FEDDFF; border-color: black; border-radius: 15px;"   name="summary" rows="20" cols="90" placeholder="           Your summarized Privacy Policy" class="form1"></textarea><br><br><br><br>
 		<form action="/action_page.php">
   		<label for="fname" style="margin-left: 150px; background-color: #BBE1D7; border-color: black; border-radius: 5px; font-size: 30px;">Cookies in use?</label><br>
-	  		<input type="text" id="fname" name="cookies" value="  Yes" style="margin-left: 150px; background-color: #52BAFF; border-color: black; border-radius: 15px; font-size: 30px;"><br><br><br>
+	  		<input type="text" id="fname" name="cookies" value="  ---" style="margin-left: 150px; background-color: #52BAFF; border-color: black; border-radius: 15px; font-size: 30px;"><br><br><br>
 
 	  	<label for="fname" style="margin-left: 150px; background-color: #BBE1D7; border-color: black; border-radius: 5px; font-size: 30px;">Personal Data being used?</label><br>
-	  		<input type="text" id="fname" name="personal" value="  No" style="margin-left: 150px; background-color: #52BAFF; border-color: black; border-radius: 15px; font-size: 30px;"><br><br><br>
+	  		<input type="text" id="fname" name="personal" value="  ---" style="margin-left: 150px; background-color: #52BAFF; border-color: black; border-radius: 15px; font-size: 30px;"><br><br><br>
 
 	  	<label for="fname" style="margin-left: 150px; background-color: #BBE1D7; border-color: black; border-radius: 5px; font-size: 30px;">Is Data Stored around the world?</label><br>
-	  		<input type="text" id="world" name="world" value="  No" style="margin-left: 150px; background-color: #52BAFF; border-color: black; border-radius: 15px; font-size: 30px;"><br><br><br>
+	  		<input type="text" id="world" name="world" value="  ---" style="margin-left: 150px; background-color: #52BAFF; border-color: black; border-radius: 15px; font-size: 30px;"><br><br><br>
 
 	  	<label for="fname" style="margin-left: 150px; background-color: #BBE1D7; border-color: black; border-radius: 5px; font-size: 30px;">Does Track your activity?</label><br>
-	  		<input type="text" id="fname" name="activity" value="  No" style="margin-left: 150px; background-color: #52BAFF; border-color: black; border-radius: 15px; font-size: 30px;"><br><br><br>
+	  		<input type="text" id="fname" name="activity" value="  ---" style="margin-left: 150px; background-color: #52BAFF; border-color: black; border-radius: 15px; font-size: 30px;"><br><br><br>
 
 	  	<label for="fname" style="margin-left: 150px; background-color: #BBE1D7; border-color: black; border-radius: 5px; font-size: 30px;">Overall smog score</label><br>
-	  		<input type="text" id="fname" name="smogScore" value="  13.52" style="margin-left: 150px; background-color: #52BAFF; border-color: black; border-radius: 15px; font-size: 30px;"><br><br><br>
+	  		<input type="text" id="fname" name="smogScore" value="  ---" style="margin-left: 150px; background-color: #52BAFF; border-color: black; border-radius: 15px; font-size: 30px;"><br><br><br>
 
 	  	<label for="fname" style="margin-left: 150px; background-color: #BBE1D7; border-color: black; border-radius: 5px; font-size: 30px;">Overall Read Score</label><br>
-	  		<input type="text" id="fname" name="readScore" value="  18.2" style="margin-left: 150px; background-color: #52BAFF; border-color: black; border-radius: 15px; font-size: 30px;"><br><br><br>
+	  		<input type="text" id="fname" name="readScore" value="  ---" style="margin-left: 150px; background-color: #52BAFF; border-color: black; border-radius: 15px; font-size: 30px;"><br><br><br>
 
 	  		
 		</form> 
